@@ -20,7 +20,13 @@
     <proprietary/>
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <usb>
+      <manufacturer>Samsung</manufacturer>
+      <model>ML-1710</model>
+      <description></description>
+      <cmdset>GDI</cmdset>
+    </usb>
+  </autodetect>
   <functionality>A</functionality>
   <driver>gdi</driver>
   <!--no "contrib_url"-->
