@@ -1,7 +1,12 @@
+2004-11-30  Tim Waugh <twaugh@redh at.com>
+
+	* printer/Samsung-ML-1710.xml: Added IEEE 1284
+	  information (RH bug #141163).
+
 2004-11-29  Tim Waugh <twaugh@redhat.com>
 
 	* printer/HP-OfficeJet_G95.xml: Added IEEE 1284
-	information (RH bug #141057).
+	  information (RH bug #141057).
 
 2004-11-24  Till Kamppeter <till.kamppeter@gmx.net>
 	* driver/epl5700l.xml, driver/epl5800l.xml, driver/epl5900l.xml,
